--- a/app/globals.css
+++ b/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
+/* :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-}
+} */
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -30,4 +30,11 @@ body {
   .text-balance {
     text-wrap: balance;
   }
+}
+
+
+.bgDesktop{
+  background-image: url("assets/images/bg-sidebar-desktop.svg");
+  background-size: cover ;
+  background-position: 50%;
 }
